[package]
name = "tree-sitter-mojo"
description = "Mojo grammar for the tree-sitter parsing library"
version = "0.20.2"
authors = [
    "Max Brunsfeld <maxbrunsfeld@gmail.com>",
    "Douglas Creager <dcreager@dcreager.net>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "mojo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/b-price/tree-sitter-mojo"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
